project hover handled + ISSUE
small projects blur out of containers

--- a/css/default.css
+++ b/css/default.css
@@ -174,7 +174,7 @@
 /** PROJECT BLOCKS */
 
 .work {
-    margin: 3vw 5vw 0 5vw;
+    margin: 0 5vw 5vw 5vw;
     width: 100%;
     height: auto;
     display: flex;
@@ -189,20 +189,22 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    overflow: hidden;
 }
 
 .project {
     width: 100%;
     cursor: pointer;
-    background-size: 25vw 35vw;
+    background-size: 25vw 40vw;
     background-image: url(http://www.placehold.it/450x450);
-    background-position: 0px 0px;
-    transition: all .2s ease-in-out;
+    background-position: 0 -5vw;
+    transition: all .3s ease-in-out;
 }
 
 .project:hover {
-    background-size: 27vw 37vw;
-    background-position: -1vw -1vw;
+    background-size: 26vw 41.5vw;
+    background-position: -0.5vw -5.5vw;
+    filter: blur(4px);
 }
 
 .long {
@@ -211,6 +213,26 @@
 
 .short {
     height: 45%;
+}
+
+.project1 {
+    background-image: url("../img/flappy-bird.png");
+}
+
+.project2 {
+    
+}
+
+.project3 {
+    
+}
+
+.project4 {
+    
+}
+
+.project5 {
+    
 }
 
 
